# nlp_scripts

./: Copy_of_bonus_unit1.ipynb  run_clm_with_distillation.py
distillation/: pyproject.toml  run_clm_with_distillation.py  run_clm_with_distillation_manual.py  utils.py
lstm/: hmm_train.py  pyproject.toml
