[tool.poetry]
name = "nlp-packages"
version = "0.1.0"
description = ""
authors = ["I.A. <azilya@github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.1"
pandas = "^2.1.1"
nltk = "^3.8.1"
hmmlearn = "^0.3.0"
tqdm = "^4.66.1"
torch = "^2.0.1"
torchtext = "<=0.16.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
flake8-bandit = "^4.1.1"
black = "^23.10.0"
flake8-isort = "^6.1.0"
flake8-bugbear = "^23.9.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
